--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="menu-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <h4>Logo</h4>
+                        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
                 </div>
 
@@ -57,10 +57,10 @@
             <!-- About -->
             <div id="about-wrapper" class="container-fluid">
                 <div id="about-logo" class="col-xs-10 col-xs-offset-1">
-                    <div class="col-xs-3 col-xs-offset-4">
-                        <p>Logo</p>
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
-                    <div class="col-xs-12">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <h4>About Cregane Hall</h4>
                     </div>
                 </div>
@@ -143,22 +143,13 @@
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
 
-                                    <div class="row">
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
+                                    <div class="col-xs-12 top">
+                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                        <p>3 Doubles</p>
                                     </div>
-
-                                    <div class="row">
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
+                                    <div class="col-xs-12 bottom">
+                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                        <p>Bakery</p>
                                     </div>
                                 </div>
                             </div>
@@ -177,22 +168,13 @@
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
 
-                                    <div class="row">
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
+                                    <div class="col-xs-12 top">
+                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                        <p>3 Doubles</p>
                                     </div>
-
-                                    <div class="row">
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
-                                        <div class="col-xs-6">
-                                            logo + text
-                                        </div>
+                                    <div class="col-xs-12 bottom">
+                                        <span class="glyphicon glyph-small glyphicon-heart-empty" aria-hidden="true"></span>
+                                        <p>Bakery</p>
                                     </div>
                                 </div>
                             </div>
@@ -346,100 +328,124 @@
                 <div id="major-icons" class="col-xs-12">
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Free Wifi</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Free Wifi</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Full Furnised</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Full Furnised</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Central Heating</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Central Heating</h5>
                         </div>
                     </div>
                 </div>
 
-                <div id="minor-icons" class="col-xs-10 col-xs-offset-1">
+                <div id="minor-icons" class="col-xs-12">
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Fridge Freezer</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>24 Hour Access</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Walking Distance</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Parking</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Smoking Area</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Bike Rack</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Washing Machine</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>On Bus Line</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Lifts</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Fire Safety</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Intercom</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Outdoor Seating Area</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Study Area</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Weekly Rubbish Collections</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Mailboxes</h5>
                         </div>
                         <div class="col-xs-6">
-                            <h5>Secure / Monitored Building</h5>
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
+                            <h5>Secure Building</h5>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>Microwave</h5>
                         </div>
                         <div class="col-xs-6">
+                            <span class="glyphicon glyph-facility glyphicon-heart-empty" aria-hidden="true"></span>
                             <h5>BBQ Area</h5>
                         </div>
                     </div>
@@ -468,13 +474,46 @@
                     </div>
                     <div class="col-xs-6">
                         <div id="walking-times">
+                            <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                             <h4>Walking times</h4>
                         </div>
                         <div id="walking-icons">
-                            <h5>Cork University Hosptial</h5>
-                            <h5>City Centre</h5>
-                            <h5>Cork Institute of Technology</h5>
-                            <h5>Cork University College</h5>
+                            <div class="col-xs-12">
+                                <div class="col-xs-2">
+                                    <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+                                </div>
+                                <div class="col-xs-10">
+                                    <h5>Cork University Hosptial</h5>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12">
+                                <div class="col-xs-2">
+                                    <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+                                </div>
+                                <div class="col-xs-10">
+                                    <h5>City Centre</h5>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12">
+                                <div class="col-xs-2">
+                                    <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+                                </div>
+                                <div class="col-xs-10">
+                                    <h5>Cork Institute of Technology</h5>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12">
+                                <div class="col-xs-2">
+                                    <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+                                </div>
+                                <div class="col-xs-10">
+                                    <h5>Cork University College</h5>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
