--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <div class="col-xs-8 col-xs-offset-2">
                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2">
-                        <h4>About Cregane Hall</h4>
+                    <div class="col-xs-10 col-xs-offset-1">
+                        <h4 class="title">About Cregane Hall</h4>
                     </div>
                 </div>
 
@@ -102,10 +102,10 @@
                 </div>
 
                 <div id="about-footer" class="col-xs-12">
-                    <div class="col-xs-10 col-xs-offset-1">
+                    <div class="col-xs-12">
                         <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
                     </div>
-                    <div class="col-xs-8 col-xs-offset-2">
+                    <div class="col-xs-10 col-xs-offset-1">
                         <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
                         <h5 id="email-us">Email us:  info@creganehall.com</h5>
                     </div>
@@ -131,7 +131,7 @@
 
                 <div id="room-title" class="col-xs-12">
                     <div class="col-xs-10 col-xs-offset-1">
-                        <h4>The Rooms</h4>
+                        <h4 class="title">The Rooms</h4>
                     </div>
                 </div>
 
@@ -207,12 +207,14 @@
             <!-- Rates -->
             <div id="rates-wrapper" class="container-fluid">
                 <div id="rates-head" class="">
-                    <h4>The Rates</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
-                    </p>
+                    <h4 class="title">The Rates</h4>
+                    <div class="rates-text col-xs-8 col-xs-offset-2">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua.
+                        </p>
+                    </div>
                 </div>
 
                 <div id="rates-table" class="col-xs-12">
@@ -321,7 +323,7 @@
             <div id="facilities-wrapper" class="container-fluid">
                 <div id="facilities-title">
                     <div class="col-xs-10 col-xs-offset-1">
-                        <h4>The Facilities</h4>
+                        <h4 class="title">The Facilities</h4>
                     </div>
                 </div>
 
@@ -456,7 +458,7 @@
             <div id="location-wrapper" class="container-fluid">
                 <div id="location-title">
                     <div id="location-title" class="col-xs-10 col-xs-offset-1">
-                        <h4>The Location</h4>
+                        <h4 class="title">The Location</h4>
                     </div>
 
                     <div id="location-map" class="col-xs-12">
@@ -522,7 +524,7 @@
             <!-- Contact Us -->
             <div id="contact-us-wrapper" class="container-fluid">
                 <div id="contact-title" class="col-xs-10 col-xs-offset-1">
-                    <h4>Contact Us</h4>
+                    <h4 class="title">Contact Us</h4>
                 </div>
 
                 <div id="contact-form">
