--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             <!-- @todo -->
 
             <!-- MOBILE -->
-            <div id="menu-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
+            <div id="menu-wrapper" class="container-fluid">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
-                    <div class="col-xs-8 col-xs-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2 hidden-sm hidden-md hidden-lg">
                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
                 </div>
 
-                <div id="menu" class="col-xs-10 col-xs-offset-1">
+                <div id="menu" class="col-xs-10 col-xs-offset-1 
+                                      col-md-7 col-md-offset-3">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid">
                             <div class="navbar-header">
@@ -42,12 +43,19 @@
                                    href="#">Menu</a>
                             </div>
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <!-- Insert new menu items here -->
-                                <li><a id="first-menu-item" href="#">Link</a></li>
-                                <li><a href="#">Link</a></li>
-                                <li><a href="#">Link</a></li>
-                            </ul>
+                                <ul class="nav navbar-nav">
+                                    <!-- Insert new menu items here -->
+                                    <li><a id="first-menu-item" href="#">About</a></li>
+                                    <li><a href="#">Rooms</a></li>
+                                    <li><a href="#">Rates</a></li>
+                                    <li><a id="menu-middle-logo" class="hidden-sm hidden-xs" href="#">
+                                        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+                                    </a></li>
+
+                                    <li><a href="#">Facilities</a></li>
+                                    <li><a href="#">Location</a></li>
+                                    <li><a href="#">Contact us</a></li>
+                                </ul>
                             </div>
                         </div>
                     </nav>
