--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
         <div class="container-fluid">
 
             <!-- header -->
-
-            <!-- DESKTOP -->
-            <!-- @todo -->
-
-            <!-- MOBILE -->
+            <!-- MOBILE AND DESKTOP COMBINED -->
             <div id="menu-wrapper" class="container-fluid">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
                     <div class="col-xs-8 col-xs-offset-2 hidden-sm hidden-md hidden-lg">
+                        <!-- MOBILE ONLY LOGO -->
                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                     </div>
                 </div>
@@ -44,10 +41,11 @@
                             </div>
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
-                                    <!-- Insert new menu items here -->
                                     <li><a id="first-menu-item" href="#">About</a></li>
                                     <li><a href="#">Rooms</a></li>
                                     <li><a href="#">Rates</a></li>
+
+                                    <!-- DESKTOP ONLY LOGO -->
                                     <li><a id="menu-middle-logo" class="hidden-sm hidden-xs" href="#">
                                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                                     </a></li>
