--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <body>
         <div class="container-fluid">
 
-            <!-- header -->
-            <!-- MOBILE AND DESKTOP COMBINED -->
+            <!-- Menu -->
             <div id="menu-wrapper" class="container-fluid">
                 <div id="menu-logo" class="col-xs-8 col-xs-offset-2">
                     <div class="col-xs-8 col-xs-offset-2 hidden-sm hidden-md hidden-lg">
@@ -62,6 +61,19 @@
 
             <!-- About -->
             <div id="about-wrapper" class="container-fluid">
+
+                <div id="about-header-img" class="col-md-12 hidden-sm hidden-xs">
+                    <img class="lazy img-responsive" src="http://dummyimage.com/1280x400/ccaacc/0a1163&text=test-head-image" alt="@todo">
+                    <div id="about-img-overlay">
+                        <p>
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+                            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+                            no sea takimata sanctus est Lorem ipsum dolor sit amet.  
+                        </p>
+                    </div>
+                </div>
+
                 <div id="about-logo" class="col-xs-10 col-xs-offset-1">
                     <div class="col-xs-8 col-xs-offset-2">
                         <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
@@ -89,7 +101,7 @@
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
                             </div>
 
                             <div class="item">
@@ -97,7 +109,7 @@
                             </div>
 
                             <div class="item">
-                                <img class="lazy img-reponsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                             </div>
                         </div>
                         <div id="nav-control" class="col-xs-6 col-xs-offset-3">
@@ -123,7 +135,7 @@
             <div id="rooms-wrapper" class="container-fluid">
                 <div id="room-image" class="col-xs-12">
                     <div class="col-xs-12">
-                        <img class="lazy img-reponsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
+                        <img class="lazy img-responsive" src="http://dummyimage.com/360x180/000/fff&text=dummy-image" alt="@todo">
                     </div>
                     <div id="room-image-text" class="col-xs-10 col-xs-offset-1">
                         <p>
@@ -144,7 +156,7 @@
                 <div id="rooms-4-way-img">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
+                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/824482/161e8a&text=dummy-image" alt="@todo">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
@@ -161,15 +173,15 @@
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
+                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/3995bf/161e8a&text=dummy-image" alt="@todo">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
+                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/30cc00/161e8a&text=dummy-image" alt="@todo">
                         </div>
                         <div class="col-xs-6">
-                            <img class="lazy img-reponsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
+                            <img class="lazy img-responsive" src="http://dummyimage.com/180x180/000/fff&text=dummy-image" alt="@todo">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <h4>3 Bedroom</h4>
@@ -468,7 +480,7 @@
                     </div>
 
                     <div id="location-map" class="col-xs-12">
-                        <img class="lazy img-reponsive"
+                        <img class="lazy img-responsive"
                              src="http://dummyimage.com/340x140/000/fff&text=dummy-map"
                              alt="@todo">
                     </div>
