--- a/index.html
+++ b/index.html
@@ -74,61 +74,88 @@
                     </div>
                 </div>
 
-                <div id="about-logo" class="col-xs-10 col-xs-offset-1">
-                    <div class="col-xs-8 col-xs-offset-2">
-                        <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-                    </div>
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <h4 class="title">About Cregane Hall</h4>
-                    </div>
-                </div>
-
-                <div id="about-text" class="col-xs-10 col-xs-offset-1">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.
-                    </p>
-                </div>
-
-                <div id="about-carousel" class="col-xs-12">
-                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
-                            </div>
-
-                            <div class="item">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
-                            </div>
-
-                            <div class="item">
-                                <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
-                            </div>
+                <div class="col-md-6">
+                    <div id="about-logo" class="col-xs-10 col-xs-offset-1">
+                        <div class="col-xs-8 col-xs-offset-2 hidden-md hidden-lg">
+                            <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
                         </div>
-                        <div id="nav-control" class="col-xs-6 col-xs-offset-3">
-                            <a class="custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
-                            <a class="custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+                        <div class="col-xs-10 col-xs-offset-1">
+                            <h4 class="title">About Cregane Hall</h4>
                         </div>
                     </div>
+
+                    <div id="about-text" class="col-xs-10 col-xs-offset-1">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia deserunt mollit anim id est
+                            laborum.
+                        </p>
+                    </div>
+
+                    <div id="about-carousel-1" class="col-xs-12">
+                        <div id="carousel-example-generic-1" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                </div>
+
+                                <div class="item">
+                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                </div>
+
+                                <div class="item">
+                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                </div>
+                            </div>
+                            <div id="nav-control" class="col-xs-6 col-xs-offset-3">
+                                <a class="custom-carousel-control-1" href="#carousel-example-generic-1" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+                                <a class="custom-carousel-control-1" href="#carousel-example-generic-1" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-                <div id="about-footer" class="col-xs-12">
-                    <div class="col-xs-12">
-                        <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
+                <div class="col-md-6">
+
+                    <!-- DESKTOP ONLY -->
+                    <div id="about-carousel-2" class="col-xs-12 hidden-sm hidden-xs">
+                        <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                </div>
+
+                                <div class="item">
+                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                </div>
+
+                                <div class="item">
+                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                </div>
+                            </div>
+                            <div id="nav-control" class="col-xs-6 col-xs-offset-3">
+                                <a class="custom-carousel-control-2" href="#carousel-example-generic-2" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+                                <a class="custom-carousel-control-2" href="#carousel-example-generic-2" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
-                        <h5 id="email-us">Email us:  info@creganehall.com</h5>
+
+                    <div id="about-footer" class="col-xs-12">
+                        <div class="col-xs-12">
+                            <h4 id="address">Farranlea Road, Bishopstown, Cork.</h4>
+                        </div>
+                        <div class="col-xs-10 col-xs-offset-1">
+                            <h5 id="call-us">Call us on: 353 - (0)21 4871029</h5>
+                            <h5 id="email-us">Email us:  info@creganehall.com</h5>
+                        </div>
                     </div>
                 </div>
-
             </div>
 
             <!-- Rooms -->
@@ -201,7 +228,7 @@
                 </div>
             </div>
 
-            <!-- Enquire now !MOBILE ONLY! !-->
+            <!-- Enquire now - MOBILE ONLY !-->
             <div id="enquire-outer-wrapper" class="container-fluid hidden-sm hidden-md hidden-lg">
                 <div id="enquire-inner-wrapper" class="col-xs-10 col-xs-offset-1">
                     <div id="form-header" class="col-xs-10 col-xs-offset-1">
