--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3">
@@ -128,15 +128,15 @@
                         <div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/824482/161e8a&text=dummy-image" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
 
                                 <div class="item">
-                                    <img class="lazy img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
+                                    <img class="lazy center-block img-responsive" src="http://dummyimage.com/360x360/000/fff&text=dummy-image" alt="@todo">
                                 </div>
                             </div>
                             <div id="nav-control" class="col-xs-6 col-xs-offset-3">
